tests/sksl/errors/SwitchTypes.dsl.glsl
### Compilation failed:

error: expected 'int', but found 'float2'

error: expected 'int', but found 'float2'

error: expected 'int', but found 'float'

error: expected 'int', but found 'float'

error: expected 'int', but found 'float'

error: expected 'int', but found 'float'

error: case value must be a constant integer

error: expected 'int', but found 'float'

error: case value must be a constant integer

9 errors
